# miniircd

./: .gitignore  CHANGES  DEVELOPMENT.md  Makefile  README  README.md  TODO  channel.py  client.py  entry_points.txt  miniircd  miniircd.py  pyproject.toml  server.py  setup.cfg  test  test.py  utils.py
deb/: build  postinst.sh  postrm.sh  preinst.sh  prerm.sh  upstart.conf
