[metadata]
name = miniircd
version = attr: miniircd.VERSION
description = A very simple Internet Relay Chat (IRC) server
long_description = file: README.md
long_description_content_type = text/markdown
author = Joel Rosdahl
author_email = joel@rosdahl.net
maintainer = Joel Rosdahl
maintainer_email = joel@rosdahl.net
url = https://github.com/jrosdahl/miniircd
license = GPLv2
keywords = IRC
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = miniircd
entry_points = file: entry_points.txt

[options.extras_require]
dev =
    mypy
    pyflakes
    pycodestyle
    nose
    twine
    pep517
